..F....... [ZBXNEXT-2073] updated jQuery to latest 1.10.2 (Eduard)
...G...PS. [ZBXNEXT-453] added a new parameter 'User' to daemon configuration that allows dropping privileges to the specified user (Juris)
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
..F....... [ZBX-8157] fixed size and style of custom user agent in web scenario edit form and fixed IE displaying input field on second click (Ivo)
A......... [ZBX-6834] fixed trigger.get not returning any results when using the "host" parameter (Pavels)
A.F....... [ZBX-8190] fixed validation in API to prevent SQL errors with Oracle database when string with excessive length is stored (Krists)
...G...PS. [ZBX-7729] added data alignment to prevent crash on non x86 processors; thanks to Pablo Ruiz for patch (Nikolaj)
..F....... [ZBX-8160] removed justification in warning message (Ivo)
..F....... [ZBX-8141] corrected 'URL' abbreviation string to uppercase (Ivo)
..F....... [ZBX-7839] fixed cloning of graphs and hosts to use changed form values (Krists)
..F....... [ZBX-8165] fixed issue when maintenance items with its hosts/host groups removed are not accessible in configuration (Krists)
...G...PS. [ZBX-2196] changed status codes of various exit calls to library macros for consistency (Juris)
........S. [ZBX-1274] fixed negative values, received from SNMP agent, being displayed as large unsigned integers (igors)
...G...... [ZBX-8031] removed pre-processor aliases for Windows string functions; converted all references of Windows types to standard C types (Juris)
.......PS. [ZBX-7534] removed the limit of authorization string (Nikolaj)
..F....... [ZBX-8158] fixed disabled hosts not shown in trigger selection popup when in configuration (Krists)
A.F....... [ZBX-8118] changed image update so that image type can not be changed after create (Krists)